--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="flex-item2">
       <div class="main">
-        <div id="text1"><a href="#"></a>&lt; &nbsp; Back to Dashboard</div>
+        <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
         <div class="search-filter">
           <div class="left">
             <!-- Select filter -->
