--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
@@ -25,41 +25,41 @@
                     <div class="form-group">
                         <div class="form-flex">
                             <label for="firstName">First Name </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="firstNameReceived($event) "></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.firstname=$event"></app-input>
                         </div>
                         <div class="form-flex">
                             <label for="lastName">Last Name </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="lastNameReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.lastname=$event"></app-input>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-flex">
                             <label for="email">Email </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="emailReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.email=$event"></app-input>
                         </div>
                         <div class="form-flex">
                             <label for="contact">Contact Number </label>
-                            <app-input [ipConfig]="ipConfig1" (outputEmit)="contactReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig1" (outputEmit)="patient.phoneNo=$event"></app-input>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-flex">
                             <label for="gender">Gender </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="genderReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.gender=$event"></app-input>
                         </div>
                         <div class="form-flex">
                             <label for="age">Age </label>
-                            <app-input [ipConfig]="ipConfig3" (outputEmit)="ageReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig3" (outputEmit)="patient.age=$event"></app-input>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-flex">
                             <label for="userID">User ID</label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="useridReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.username=$event"></app-input>
                         </div>
                         <div class="form-flex">
                             <label for="password">Password </label>
-                            <app-input [ipConfig]="ipConfig2" (outputEmit)="pwdReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig2" (outputEmit)="patient.password=$event"></app-input>
                         </div>
                     </div>
                     <br>
@@ -68,57 +68,56 @@
                     </div>
                 </div>
             </form>
-
             <form *ngIf="patientActive==false" (ngSubmit)="onDocSubmit()">
                 <div class="main-form">
                     <div class="form-group">
                     <div class="form-flex">
                         <label for="doctorName">Doctor Name </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="docNameReceived($event) "></app-input>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="doctor.doctorName=$event"></app-input>
                     </div>
                     <div class="form-flex">
                         <label for="aadhar">Aadhar No </label>
-                        <app-input [ipConfig]="ipConfig3" (outputEmit)="aadharReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig3" (outputEmit)="doctor.aadharNo=$event"></app-input>
                     </div>
                     </div>
                     <div class="form-group">
                     <div class="form-flex">
                         <label for="regNO">Registration No </label>
-                        <app-input [ipConfig]="ipConfig3" (outputEmit)="regNoReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig3" (outputEmit)="doctor.registrationNo=$event"></app-input>
                     </div>
                     <div class="form-flex">
                         <label for="year">Year of Registration </label>
-                        <app-input [ipConfig]="ipConfig3" (outputEmit)="yearReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig3" (outputEmit)="doctor.yearOfReg=$event"></app-input>
                     </div>
                     </div>
                     <div class="form-group">
                     <div class="form-flex">
                         <label for="council">State Medical Council </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="councilReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="doctor.stateMedicalCouncil=$event"></app-input>
                     </div>
                     <div class="form-flex">
                         <label for="Qualification">Qualification </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="qualReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="doctor.qualification=$event"></app-input>
                     </div>
                     </div>
                     <div class="form-group">
                     <div class="form-flex">
                         <label for="email">Email </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="docEmailReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="doctor.email=$event"></app-input>
                     </div>
                     <div class="form-flex">
                         <label for="contact">Contact Number </label>
-                        <app-input [ipConfig]="ipConfig1" (outputEmit)="docContactReceived($event)" ></app-input>
+                        <app-input [ipConfig]="ipConfig1" (outputEmit)="doctor.phoneNo=$event" ></app-input>
                     </div>
                     </div>
                     <div class="form-group">
                     <div class="form-flex">
                         <label for="userID">User ID</label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="docIdReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="doctor.username=$event" > </app-input>
                     </div>
                     <div class="form-flex">
                         <label for="password">Password </label>
-                        <app-input [ipConfig]="ipConfig2" (outputEmit)="docPwdReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig2" (outputEmit)="doctor.password=$event"></app-input>
                     </div>
                     </div>
                     <div id="login-btn">
