--- a/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.scss
+++ b/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.scss
@@ -140,3 +140,13 @@ td {
     letter-spacing: 0.1em;
     color: rgba(0, 0, 0, 0.85);
 }
+
+#patient-id{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1.25em;
+    margin-top: -1.25em;
+    #search{
+    margin-left: 0.25em;
+    }
+    }
