--- a/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
+++ b/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
@@ -9,6 +9,10 @@
       <div class="flex-item2">
         <div class="main">
           <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
+          <div id="doctor-id">
+            <app-input [ipConfig]="searchDoctorId"></app-input>
+            <app-button  [btntext]="'Search'" id="search"[btnConfig]="searchBtnConfig1"></app-button>
+            </div>
           <div id="registered-doctors">Registered Doctors</div>
           <div class="table-container">
             <table>
