--- a/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.scss
+++ b/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.scss
@@ -40,6 +40,15 @@
                     padding-top: 1.25em;
                     padding-left: 1.25em;
                 }
+                #doctor-id{
+                    display: flex;
+                    justify-content: flex-end;
+                    margin-right: 1.25em;
+                    margin-top: -1.25em;
+                    #search{
+                    margin-left: 0.25em;
+                    }
+                    }
 
                 #registered-doctors{
                     display: flex;
