--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -1,24 +1,43 @@
 <nav class="navbar">
-  <div class="name">
-    <img class="plus" src="assets/images/plus_image.png" /><b>Central <span> Health Log</span></b>
+  <div class="navbar-left">
+    <img class="plus" src="assets/images/plus_image.png" /><b
+      >Central <span> Health Log</span></b
+    >
   </div>
-  <div>
-    <div class="navbar-nav">
+
+  <div class="navbar-right">
+    <div style="margin-right: 1em;">
+      <app-button
+          *ngIf="verifyPrescription" 
+          [btntext]="'Verify Prescription'"
+          [btnConfig]="textBtnConfig"
+          (onClick)="onClickEventReceived($event)"
+        >
+        </app-button>
+    </div>
+    <div>
       <div id="button" *ngIf="btn">
-        <app-button *ngIf="btn" [btntext]="Text" [btnConfig]="textBtnConfig" (onClick)="onClickEventReceived($event)">
+        <app-button
+          *ngIf="btn"
+          [btntext]="Text"
+          [btnConfig]="textBtnConfig"
+          (onClick)="onClickEventReceived($event)"
+        >
         </app-button>
       </div>
       <div id="Profile" *ngIf="!btn">
-        <img class="image" src="assets/images/Person.png">
-        <app-dropdown (value)="saveValue($event)" class="dropdown" [states]="[name,'Logout']"
-          [dropConfig]="textDropConfig">
+        <img class="image" src="assets/images/Person.png" />
+        <app-dropdown
+          (value)="saveValue($event)"
+          class="dropdown"
+          [states]="[name, 'Logout']"
+          [dropConfig]="textDropConfig"
+        >
         </app-dropdown>
       </div>
     </div>
   </div>
 </nav>
-
-
 
 <!-- How to use -->
 <!-- for button in navbar -->
