--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -1,10 +1,34 @@
 .navbar {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 0em 0em;
+  grid-auto-flow: row;
+  grid-template-areas: ". .";
+
   background-color: #fff;
   width: 100%;
   height: 100%;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 1.25em;
   box-shadow: 0 0.09em 0.09em rgba(0, 0, 0, 0.25);
+
+  .navbar-right {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 0em 0em;
+    grid-auto-flow: row;
+    grid-template-areas: ". .";
+
+    #Profile {
+      display: inline-flex;
+      width: 100%;
+      align-items: center;
+      font-size: 1em;
+      // justify-content: space-around;
+    }
+  }
 
   span {
     color: #1cb5bd;
@@ -15,16 +39,7 @@
     font-size: 1.25em;
   }
 
-
-  #Profile{
-    display: inline-flex;
-    width: 100%;
-    align-items: center;
-    font-size: 1em;
-    // justify-content: space-around;
-}
-.image{
+  .image {
     height: 100%;
-
-}
+  }
 }
