--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -6,14 +6,14 @@
   </div>
 
   <div class="navbar-right">
-    <div style="margin-right: 1em;">
+    <div style="margin-right: 1em">
       <app-button
-          *ngIf="verifyPrescription" 
-          [btntext]="'Verify Prescription'"
-          [btnConfig]="textBtnConfig"
-          (onClick)="onClickEventReceived($event)"
-        >
-        </app-button>
+        *ngIf="verifyPrescription"
+        [btntext]="'Verify Prescription'"
+        [btnConfig]="textBtnConfig"
+        (onClick)="openPopup()"
+      >
+      </app-button>
     </div>
     <div>
       <div id="button" *ngIf="btn">
@@ -35,6 +35,47 @@
         >
         </app-dropdown>
       </div>
+    </div>
+  </div>
+
+  <!-- <div class="modal"  "> -->
+
+  <div class="modal" role="dialog" [ngStyle]="{ display: displayStyle }">
+    <div *ngIf="!checked" class="modal-header">
+      <h4 class="modal-title">Verify Prescription</h4>
+    </div>
+    <div *ngIf="!checked" class="modal-body">
+      <div class="form-cell">
+        <div class="cell">
+          <label>Upload file:</label>
+          <input (change)="changeVerify($event)" type="file" id="myfile" name="myfile" accept="application/pdf"/>
+        </div>
+      </div>
+      <br />
+      <div class="modal-footer">
+        <app-button
+          [btntext]="'Verify'"
+          [btnConfig]="textBtnConfig"
+          (click)="verifyPresc()"
+        >
+        </app-button>
+        <app-button
+          [btntext]="'Close'"
+          [btnConfig]="textBtnConfig"
+          (click)="closePopup()"
+        >
+        </app-button>
+      </div>
+    </div>
+    <div class="modal-next">
+      <div style="font-size: 1.5em">{{verificationStatus}}</div>
+      <br />
+      <app-button
+        [btntext]="'Close'"
+        [btnConfig]="textBtnConfig"
+        (click)="closePopup()"
+      >
+      </app-button>
     </div>
   </div>
 </nav>
