--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -13,6 +13,39 @@
   font-size: 1.25em;
   box-shadow: 0 0.09em 0.09em rgba(0, 0, 0, 0.25);
 
+  .modal {
+    width: 25em;
+    height: 15em;
+    background-color: #FFF;
+    position: absolute;
+    left: 31em;
+    top: 10em;
+    text-align: center;
+    align-self: center;
+    border: 0.8em solid #DAFDFF;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .modal-header {
+        text-align: center;
+        align-self: center;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .modal-next {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 3.5em;
+    }
+}
+
   .navbar-right {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -42,4 +75,30 @@
   .image {
     height: 100%;
   }
+}
+
+.form-cell {
+  margin-top: 1.25em;
+  margin-left: 1.25em;
+  margin-right: 1.25em;
+
+  .cell {
+      display: grid;
+      grid-template-columns: 1fr 1.5fr;
+      grid-template-rows: 1fr;
+      gap: 0em 0em;
+      grid-template-areas:
+          ". .";
+
+      label {
+          font-family: 'Poppins';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 1em;
+          line-height: 1.5em;
+          letter-spacing: 0.1em;
+          color: #2C2D2D;
+      }
+  }
+
 }
